Improved styling structures. Corrected layout issue with headers.

--- a/paint/src/styles.css
+++ b/paint/src/styles.css
@@ -320,7 +320,7 @@ h3 {
 }
 
 .yellowOnHover:hover {
-    background-color: yellow;
+    background-color: yellow !important;
 }
 
 .tableTextCell {
